# self-hosted-pyannote-diarization

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  startup_script.sh
app/: main.py
app/middleware/: logging_middleware.py
app/utils/: config.py  handler.py
